[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.10"
log = "0.4"
env_logger = "0.10"
clap = {version = "4.4", features = ["derive"]}
winnow = "0.5.19"

# wasm dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
web-sys = {version = "0.3", features = ["console"]}
prime_factorization = "1.0.4"
itertools = "0.12.0"
